# mostime

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: mostime.yml  pre-commit.yml
src/app/: config.py  handlers.py  main.py
tests/: arbitrary.py  conftest.py  test_handlers.py
