[tool.poetry]
name = "mostime"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2022.7"
loguru = "^0.6.0"
aiohttp = "^3.8.3"
pytest = "^7.2.0"
pytest-freezegun = "^0.4.2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = "src"
